--- a/kubernetes-infra/Vagrantfile
+++ b/kubernetes-infra/Vagrantfile
@@ -9,11 +9,10 @@ else
 end
 
 # Define the number of worker nodes
-NUM_WORKER_NODES = 2
+NUM_WORKER_NODES = 1
 
-IP = "192.168.10."
-MASTER_IP_START = 10
-WORKERS_IP_START = 20
+IP = "192.168.1."
+IP_START = 10
 
 Vagrant.configure("2") do |config|
 
@@ -36,8 +35,8 @@ Vagrant.configure("2") do |config|
         vb.cpus = conf["master"]["cpus"]
     end
     node.vm.hostname = "master"
-    node.vm.network :private_network, ip: IP + "#{MASTER_IP_START}"
-    node.vm.network "forwarded_port", guest: 22, host: "#{2710}"
+    node.vm.network "public_network", bridge: conf["interface"],  ip: IP + "#{IP_START}"
+    # node.vm.network "forwarded_port", guest: 22, host: "#{2710}"
 
     node.vm.provision "setup-hosts", :type => "shell", :path => "../scripts/setup-k8s-hosts.sh" do |s|
       s.args = ["enp0s8"]
@@ -47,6 +46,9 @@ Vagrant.configure("2") do |config|
     node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "../scripts/allow-bridge-nf-traffic.sh"
     if conf["install_docker"] == true
       node.vm.provision "install-docker", type: "shell", :path => "../scripts/install-docker.sh"
+    end 
+    if conf["install_kubetools"] == true
+      node.vm.provision "install-kubetools", type: "shell", :path => "../scripts/install_kubetools.sh"
     end 
 
   end
@@ -61,8 +63,8 @@ Vagrant.configure("2") do |config|
             vb.cpus = conf["workers"]["cpus"]
         end
         node.vm.hostname = "worker-#{i}"
-        node.vm.network :private_network, ip: IP + "#{WORKERS_IP_START + i}"
-        node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
+        node.vm.network "public_network", bridge: conf["interface"], ip: IP + "#{IP_START + i*10}"
+        # node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
 
         node.vm.provision "setup-hosts", :type => "shell", :path => "../scripts/setup-k8s-hosts.sh" do |s|
           s.args = ["enp0s8"]
@@ -72,6 +74,9 @@ Vagrant.configure("2") do |config|
         node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "../scripts/allow-bridge-nf-traffic.sh"
         if conf["install_docker"] == true
           node.vm.provision "install-docker", type: "shell", :path => "../scripts/install-docker.sh"
+        end 
+        if conf["install_kubetools"] == true
+          node.vm.provision "install-kubetools", type: "shell", :path => "../scripts/install_kubetools.sh"
         end 
 
       end
