--- a/single-node/Vagrantfile
+++ b/single-node/Vagrantfile
@@ -17,7 +17,7 @@ IP_START = conf["ip_start"]
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "ubuntu/bionic64"
+  config.vm.box = "hashicorp/bionic64"
 
   config.vm.box_check_update = false
 
@@ -38,13 +38,6 @@ Vagrant.configure("2") do |config|
         end
         node.vm.hostname = "node-#{i}"
         node.vm.network :private_network, ip: IP + "#{IP_START + i}"
-        node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
-
-        node.vm.provision "setup-hosts", :type => "shell", :path => "../scripts/setup-hosts.sh" do |s|
-          s.args = ["enp0s8", NODES_NUMBER, IP, IP_START]
-        end
-
-        node.vm.provision "setup-dns", type: "shell", :path => "../scripts/update-dns.sh"
         node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "../scripts/allow-bridge-nf-traffic.sh"
         if conf["install_docker"] == true
           node.vm.provision "install-docker", type: "shell", :path => "../scripts/install-docker.sh"
