--- a/single-node/Vagrantfile
+++ b/single-node/Vagrantfile
@@ -26,6 +26,7 @@ Vagrant.configure("2") do |config|
     node.vm.hostname = "lab-vm"
     node.vm.network :private_network, ip: IP
     node.vm.provision "allow-bridge-nf-traffic", :type => "shell", :path => "../scripts/allow-bridge-nf-traffic.sh"
+    node.vm.provision "update-dns", :type => "shell", :path => "../scripts/update-dns.sh"
     if conf["install_docker"] == true
       node.vm.provision "install-docker", type: "shell", :path => "../scripts/install-docker.sh"
     end 
